# zygisk-api-rs

./: ARCHITECTURE.md  Cargo.toml  README.md  api_overview_content.md  api_versioning_content.md  companion_process_content.md  jni_integration_content.md  memory_abi_content.md  module_lifecycle_content.md  overall_architecture_content.md
.github/workflows/: docs.yml
src/: aux.rs  error.rs  lib.rs  utils.rs
src/api/: mod.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs
src/raw/: mod.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs
