[package]
name = "zygisk-api"
author = ["Paskal Sitepu <rmnscnce@ya.ru>"]
license = "0BSD"
description = "Zygisk API bindings for Rust"
version = "0.0.0"
edition = "2021"

[dependencies]
thiserror = { version = "1.0" }
libc = { version = "0.2" }
jni = { version = "0.21" }
bitflags = { version = "2.6" }
